<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_followed_pubs"
            android:icon="@drawable/ic_baseline_stars_rounded_24"
            android:title="@string/menu_followed_pubs" />
        <item
            android:id="@+id/nav_acquired_events"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_acquired_events" />
        <item
            android:id="@+id/nav_find_pub"
            android:icon="@drawable/ic_action_search_black_24dp"
            android:title="@string/menu_find_pub" />
    </group>

    <item android:title="@string/menu_submenu_title">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
